--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>The Gamer Review</title>
-    <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"/>
+    # <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
