added ruby extension to vscode

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>The Gamer Review</title>
     <link rel="stylesheet" href="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"/>
-    # <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"></script>
+    <%# <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"></script> %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
