added data-auto-ally to fontawesome script tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,13 @@
 <html>
   <head>
     <title>The Gamer Review</title>
-    <link rel="stylesheet" href="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"/>
-    <%# <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous"></script> %>
+    <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous" data-auto-a11y="true"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%# include react %>
-    <%# <%= javascript_pack_tag 'hello_react' %>
   </head>
 
   <body>
