--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>The Gamer Review</title>
-    <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous" data-auto-a11y="true"></script>
+    <%# <script src="https://kit.fontawesome.com/10d83bd48a.js" crossorigin="anonymous" data-auto-a11y="true"></script> %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
